added the title of the document

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Document</title>
+    <title>Form validations</title>
   </head>
   <body>
     <div class="container">
